# OpenInterpreter--open-interpreter

./: acceptance.md  goal.md  progress.md  pyproject.toml  todo.md
codeagent/: __init__.py  agent.py  history.py  llm.py  respond.py
codeagent/executors/: __init__.py  python_executor.py  shell_executor.py
codeagent/terminal/: __init__.py  components.py  terminal_interface.py
tests/: test_agent.py  test_history.py  test_llm.py  test_python_executor.py  test_respond.py  test_shell_executor.py  test_terminal.py
