[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeagent"
version = "0.1.0"
description = "An LLM-powered code execution assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.0.0",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
